--- a/src/main/resources/com/example/laba1/button-calkul.css
+++ b/src/main/resources/com/example/laba1/button-calkul.css
@@ -1,4 +1,6 @@
-.button_num{
-    -fx-background-color: #FFFFFF;
-    box-shadow: 2px 1px 2px #000000;
+#button_num{
+    -fx-graphic: url(proiz.png);
+    -fx-background-color: #F9F9F9;
+    -fx-border-color:  #CACACA;
+    -fx-border-radius: 5px;
 }
