--- a/src/main/resources/com/example/laba1/hello-view.fxml
+++ b/src/main/resources/com/example/laba1/hello-view.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
@@ -58,7 +57,7 @@
                 <Font size="20.0" />
             </font>
         </Button>
-        <Button fx:id="proiz" mnemonicParsing="false" prefHeight="44.0" prefWidth="83.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+        <Button fx:id="proiz" mnemonicParsing="false" prefHeight="44.0" prefWidth="83.0" style="-fx-border-color: #CACACA; -fx-background-color: #F9F9F9; -fx-border-radius: 5px;" GridPane.columnIndex="3" GridPane.rowIndex="2" />
         <Button id="four" mnemonicParsing="false" prefHeight="44.0" prefWidth="83.0" style="-fx-border-color: #CACACA; -fx-background-color: #FFFFFF; -fx-border-radius: 5px;" text="4" GridPane.columnIndex="0" GridPane.rowIndex="3">
             <font>
                 <Font size="20.0" />
@@ -115,9 +114,35 @@
             </font>
         </Button>
     </GridPane>
-    <Label alignment="CENTER_RIGHT" layoutX="4.0" layoutY="115.0" prefHeight="70.0" prefWidth="323.0" text="0" textAlignment="RIGHT" AnchorPane.bottomAnchor="326.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="3.0">
+    <Label alignment="CENTER_RIGHT" layoutX="4.0" layoutY="90.0" prefHeight="70.0" prefWidth="323.0" text="0" textAlignment="RIGHT" AnchorPane.bottomAnchor="342.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="90.0">
         <font>
           <Font size="48.0" />
         </font>
     </Label>
+   <GridPane layoutX="147.0" layoutY="170.0" prefHeight="27.0" prefWidth="405.0" AnchorPane.bottomAnchor="305.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="170.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+
+     </rowConstraints>
+      <children>
+         <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="64.0" style="-fx-background-color: #F3F3F3;" text="МС" />
+         <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="66.0" style="-fx-background-color: #F3F3F3;" text="MR" GridPane.columnIndex="1" />
+         <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="66.0" style="-fx-background-color: #F3F3F3;" text="M+" GridPane.columnIndex="2" />
+         <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="82.0" style="-fx-background-color: #F3F3F3;" text="M-" GridPane.columnIndex="3" />
+         <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="91.0" style="-fx-background-color: #F3F3F3;" text="MS" GridPane.columnIndex="4" />
+         <Button mnemonicParsing="false" prefHeight="79.0" prefWidth="94.0" style="-fx-background-color: #F3F3F3;" text="M" GridPane.columnIndex="5" />
+      </children>
+   </GridPane>
+   <Label alignment="TOP_RIGHT" layoutX="93.0" layoutY="56.0" prefHeight="27.0" prefWidth="234.0" textAlignment="RIGHT" textFill="#616161" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="55.0">
+      <font>
+         <Font size="17.0" />
+      </font></Label>
 </AnchorPane>
